--- a/homework_3/css/style.css
+++ b/homework_3/css/style.css
@@ -19,6 +19,12 @@ td, th {
     margin: 0 auto;
 }
 
+.table-title {
+    color: #126158;
+    margin-bottom: 40px;
+    margin-top: 40px;
+}
+
 .center {
     text-align: center;
 }
@@ -108,6 +114,41 @@ td, th {
     font-weight: bold;
 }
 
+.cell-9 {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: 10px;
+}
+
+.cell-10 {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    margin-bottom: 5px;
+}
+
+.cell-11 {
+    border-radius: 7px;
+    padding: 5px;
+    margin-right: 5px;
+    background-color: #81DF03;
+   }
+
+.cell-12 {
+    border-radius: 7px;
+    margin-right: 5px;
+    width: 80px;
+    height: 20px;
+}
+
+.cell-13 {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
 .cell-6-total {
     display: flex;
     align-items: center;
@@ -156,6 +197,12 @@ td, th {
     font-size: 26px;
     text-shadow: 2px 8px 6px rgba(0,0,0,0.2),
                  0px -5px 35px rgba(255,255,255,0.3);
+}
+
+.legenda-text {
+    font-size: 12px;
+    font-weight: bold;
+    color: #126158;
 }
 
 .cell-name {
