--- a/homework_4/scss/style.scss
+++ b/homework_4/scss/style.scss
@@ -1,4 +1,5 @@
 @import "../../node_modules/scss-reset/reset";
+@import "../../node_modules/normalize-scss/sass/normalize";
 @import "./base/variables";
 @import "./base/fonts";
 @import "./base/default";
