--- a/homework_6/css/style.css
+++ b/homework_6/css/style.css
@@ -610,7 +610,7 @@ body {
 }
 
 .container {
-  max-width: 1280px;
+  max-width: 1440px;
   margin: 0 auto;
   padding: 0 20px;
   width: 100%;
@@ -694,7 +694,7 @@ body {
   top: 150px;
 }
 .main-sidebar__title {
-  font-size: 24px;
+  font-size: 1.6666666667vw;
   font-weight: 600;
   margin-bottom: 20px;
 }
@@ -709,7 +709,7 @@ body {
 .main-sidebar__link {
   text-decoration: none;
   color: #333;
-  font-size: 16px;
+  font-size: 1.1111111111vw;
   position: relative;
   left: 20px;
 }
