--- a/homework_6/scss/components/_main.scss
+++ b/homework_6/scss/components/_main.scss
@@ -25,7 +25,7 @@
         }
 
         &__title {
-            font-size: 24px;
+            font-size: calc(24/1440*100vw);
             font-weight: 600;
             margin-bottom: 20px;
         }
@@ -43,7 +43,7 @@
         &__link {
             text-decoration: none;
             color: $color-main;
-            font-size: 16px;
+            font-size: calc(16/1440*100vw);;
             position: relative;
             left: 20px;
 
