--- a/homework_5/css/style.css
+++ b/homework_5/css/style.css
@@ -667,7 +667,7 @@ body {
   cursor: pointer;
   font-size: 16px;
 }
-.header__bottom-letter.inactive {
+.header__bottom-letter_inactive {
   cursor: default;
   color: #b6bbb3;
 }
