--- a/attestation_1/scss/style.scss
+++ b/attestation_1/scss/style.scss
@@ -3,3 +3,8 @@
 @import "./base/fonts";
 @import "./base/variables";
 @import "./base/general";
+@import "./components/header";
+@import "./components/main";
+@import "./components/form";
+@import "./components/input";
+@import "./components/button";
