--- a/attestation_1/scss/base/_variables.scss
+++ b/attestation_1/scss/base/_variables.scss
@@ -2,5 +2,6 @@ $color-main: #787878;
 $color-white: #FFF;
 $color-dark-blue: #1A226B;
 $color-grey: #CCCCCC;
+$color-light-grey: #E5E5E5;
 $coeff-1440-w: 100vw / 1440;
 $coeff-768-w: 100vw / 768;
