--- a/attestation_1/scss/components/_form.scss
+++ b/attestation_1/scss/components/_form.scss
@@ -21,4 +21,37 @@
     &__sign-in {
         margin-top: 42px;
     }
+
+    &__radio-group {
+        align-self: flex-start;
+        margin-bottom: 11px;
+    }
+
+    &__checkbox-group {
+        align-self: flex-start;
+    }
+
+    &__textarea-group {
+        margin-bottom: 28px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .form-sign {
+        &__title {
+            font-size: 40px;
+            line-height: 40px;
+        }
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .form-sign {
+        padding: 26px 20px 35px;
+
+        &__title {
+            font-size: 30px;
+            line-height: 30px;
+        }
+    }
 }
