--- a/attestation_1/scss/style.scss
+++ b/attestation_1/scss/style.scss
@@ -4,7 +4,11 @@
 @import "./base/variables";
 @import "./base/general";
 @import "./components/header";
+@import "./components/burger";
 @import "./components/main";
 @import "./components/form";
 @import "./components/input";
 @import "./components/button";
+@import "./components/radio";
+@import "./components/checkbox";
+@import "./components/textarea";
