--- a/attestation_1/css/style.css
+++ b/attestation_1/css/style.css
@@ -729,6 +729,16 @@ body {
   margin: 0 auto;
 }
 
+.wrapper {
+  padding: 0 15px;
+}
+
+@media screen and (max-width: 1439px) {
+  .container {
+    max-width: 95.8333333333vw;
+    margin: 0 auto;
+  }
+}
 .header {
   position: relative;
 }
@@ -749,6 +759,9 @@ body {
   align-items: center;
   padding: 20px 0 12px;
 }
+.header-inner__burger {
+  display: none;
+}
 .header-inner__left {
   display: flex;
   align-items: center;
@@ -756,6 +769,10 @@ body {
 .header-inner__right {
   display: flex;
   align-items: center;
+}
+.header-inner__logo img {
+  width: 222px;
+  height: auto;
 }
 .header-inner__title {
   font-family: "Inter";
@@ -773,14 +790,94 @@ body {
 .header-inner__link:hover {
   color: #CCCCCC;
 }
-.header-inner__sign-in {
-  margin-left: 40px;
+.header-inner__link:not(:last-child) {
+  margin-right: 40px;
+}
+.header-inner__link.header-inner__sign_active {
+  color: #1A226B;
+}
+
+@media screen and (max-width: 1199px) {
+  .header-inner__title {
+    font-size: 28px;
+    line-height: 34px;
+  }
+  .header-inner__link:not(:last-child) {
+    margin-right: 10px;
+  }
+}
+@media screen and (max-width: 767px) {
+  .header-inner__logo img {
+    width: 124px;
+  }
+  .header-inner__title {
+    font-size: 24px;
+    line-height: 29px;
+  }
+  .header-inner__link {
+    font-size: 16px;
+    line-height: 19px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .header-inner__menu {
+    display: none;
+  }
+  .header-inner__burger {
+    display: block;
+  }
+  .header-inner__title {
+    font-size: 20px;
+    line-height: 24px;
+    margin-left: 10px;
+  }
+}
+.burger {
+  position: relative;
+}
+.burger__img {
+  cursor: pointer;
+}
+.burger__list {
+  display: none;
+  position: absolute;
+  right: 0;
+  top: 27px;
+  padding: 20px;
+  z-index: 1;
+  background: #E5E5E5;
+}
+.burger__list_visible {
+  display: block;
+}
+.burger__link {
+  display: inline-block;
+  text-decoration: none;
+  color: #787878;
+  font-size: 16px;
+  line-height: 19px;
+}
+.burger__item:not(:last-child) {
+  margin-bottom: 20px;
+}
+.burger__link.header-inner__sign_active {
+  color: #1A226B;
 }
 
 .main__form-sign {
   margin: 125px auto 0;
 }
 
+@media screen and (max-width: 767px) {
+  .main__form-sign {
+    margin: 96px auto 0;
+  }
+}
+@media screen and (max-width: 575px) {
+  .main__form-sign {
+    margin: 40px auto 0;
+  }
+}
 .form-sign {
   display: flex;
   flex-direction: column;
@@ -802,7 +899,32 @@ body {
 .form-sign__sign-in {
   margin-top: 42px;
 }
+.form-sign__radio-group {
+  align-self: flex-start;
+  margin-bottom: 11px;
+}
+.form-sign__checkbox-group {
+  align-self: flex-start;
+}
+.form-sign__textarea-group {
+  margin-bottom: 28px;
+}
 
+@media screen and (max-width: 767px) {
+  .form-sign__title {
+    font-size: 40px;
+    line-height: 40px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .form-sign {
+    padding: 26px 20px 35px;
+  }
+  .form-sign__title {
+    font-size: 30px;
+    line-height: 30px;
+  }
+}
 .input-group {
   display: flex;
   flex-direction: column;
@@ -832,18 +954,184 @@ body {
   color: #CCCCCC;
 }
 
+@media screen and (max-width: 767px) {
+  .input-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .input-group__input {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .input-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .input-group__input {
+    font-size: 18px;
+    line-height: 33px;
+  }
+}
 .btn {
   min-width: 180px;
   background-color: #1A226B;
-  padding: 16px 0;
+  padding: 18px 0;
   color: #FFF;
   font-size: 24px;
   line-height: 16px;
   font-weight: 700;
-  border: 2px solid #1A226B;
 }
 .btn:hover {
-  border: 2px solid #1A226B;
-  background-color: #FFF;
-  color: #1A226B;
+  background-color: #4E58B5;
+}
+
+@media screen and (max-width: 767px) {
+  .btn {
+    font-size: 22px;
+    line-height: 24px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .btn {
+    font-size: 20px;
+    line-height: 24px;
+    min-width: 140px;
+    padding: 14px 0;
+  }
+}
+.radio-group__element {
+  position: relative;
+}
+.radio-group__element:not(:last-child) {
+  margin-bottom: 14px;
+}
+.radio-group__input {
+  opacity: 0;
+}
+.radio-group__input:checked + .radio-group__element-label::after {
+  background-color: #787878;
+}
+.radio-group__label {
+  display: inline-block;
+  margin-bottom: 7px;
+  padding-left: 8px;
+}
+.radio-group__element-label {
+  margin-left: 10px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+}
+.radio-group__element-label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 20px;
+  height: 20px;
+  border: 2px solid #787878;
+  border-radius: 50%;
+}
+.radio-group__element-label::after {
+  content: "";
+  position: absolute;
+  left: 4px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+}
+
+@media screen and (max-width: 767px) {
+  .radio-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .radio-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+}
+.checkbox-group {
+  position: relative;
+  display: flex;
+}
+.checkbox-group__input {
+  opacity: 0;
+}
+.checkbox-group__input:checked + .checkbox-group__label::after {
+  background-color: #787878;
+}
+.checkbox-group__label {
+  margin-left: 17px;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 16px;
+}
+.checkbox-group__label::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 24px;
+  height: 24px;
+  border: 2px solid #787878;
+}
+.checkbox-group__label::after {
+  content: "";
+  position: absolute;
+  left: 6px;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 12px;
+  height: 12px;
+}
+
+.textarea-group {
+  align-self: flex-start;
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.textarea-group__label {
+  margin-bottom: 7px;
+  padding-left: 8px;
+}
+.textarea-group__input {
+  border: 2px solid #787878;
+  color: #CCCCCC;
+  font-size: 28px;
+  line-height: 36px;
+  font-weight: 700;
+  padding: 6px 11px;
+  height: 246px;
+  resize: none;
+}
+
+@media screen and (max-width: 767px) {
+  .textarea-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .textarea-group__input {
+    font-size: 24px;
+    line-height: 30px;
+  }
+}
+@media screen and (max-width: 575px) {
+  .textarea-group__label {
+    font-size: 14px;
+    line-height: 14px;
+  }
+  .textarea-group__input {
+    font-size: 18px;
+    line-height: 33px;
+  }
 }/*# sourceMappingURL=style.css.map */
