--- a/attestation_1/scss/base/_general.scss
+++ b/attestation_1/scss/base/_general.scss
@@ -12,3 +12,14 @@ body {
   max-width: 1380px;
   margin: 0 auto;
 }
+
+.wrapper {
+  padding: 0 15px;
+}
+
+@media screen and (max-width: 1439px) {
+  .container {
+    max-width: calc(1380 * $coeff-1440-w);
+    margin: 0 auto;
+  }
+}
