--- a/attestation_1/scss/components/_button.scss
+++ b/attestation_1/scss/components/_button.scss
@@ -1,16 +1,29 @@
 .btn {
     min-width: 180px;
     background-color: $color-dark-blue;
-    padding: 16px 0;
+    padding: 18px 0;
     color: $color-white;
     font-size: 24px;
     line-height: 16px;
     font-weight: 700;
-    border: 2px solid $color-dark-blue;
     
     &:hover {
-        border: 2px solid $color-dark-blue;
-        background-color: $color-white;
-        color: $color-dark-blue;
+        background-color: #4E58B5;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .btn {
+        font-size: 22px;
+        line-height: 24px;
+    }
+}
+
+@media screen and (max-width: 575px) {
+    .btn {
+        font-size: 20px;
+        line-height: 24px;
+        min-width: 140px;
+        padding: 14px 0;
     }
 }
