--- a/attestation_1/scss/components/_textarea.scss
+++ b/attestation_1/scss/components/_textarea.scss
@@ -1,31 +1,28 @@
-.input-group {
+.textarea-group {
+    align-self: flex-start;
     display: flex;
     flex-direction: column;
     width: 100%;
 
     &__label {
-        font-size: 16px;
-        line-height: 16px;
+        margin-bottom: 7px;
         padding-left: 8px;
     }
 
     &__input {
         border: 2px solid $color-main;
-        font-weight: 700;
+        color: $color-grey;
         font-size: 28px;
         line-height: 36px;
-        color: $color-main;
-        padding: 5px 13px;
-        margin-top: 4px;
-        
-        &::placeholder {
-            color: $color-grey;
-        }
+        font-weight: 700;
+        padding: 6px 11px;
+        height: 246px;
+        resize: none;
     }
 }
 
 @media screen and (max-width: 767px) {
-    .input-group {
+    .textarea-group {
         &__label {
             font-size: 14px;
             line-height: 14px;
@@ -39,7 +36,7 @@
 }
 
 @media screen and (max-width: 575px) {
-    .input-group {
+    .textarea-group {
         &__label {
             font-size: 14px;
             line-height: 14px;
@@ -51,4 +48,3 @@
         }
     }
 }
-
