--- a/attestation_1/scss/base/_general.scss
+++ b/attestation_1/scss/base/_general.scss
@@ -23,3 +23,9 @@ body {
     margin: 0 auto;
   }
 }
+
+@media screen and (min-width: 1200px) {
+  html {
+    margin-right: calc(-1 * (100vw - 100%));
+  }
+}
