--- a/attestation_1/scss/components/_header.scss
+++ b/attestation_1/scss/components/_header.scss
@@ -102,6 +102,8 @@
 
 @media screen and (max-width: 575px) {
     .header-inner {
+        padding: 20px 5px 12px;
+
         &__menu {
             display: none;
         }
