attestation_1 added gender value

--- a/attestation_1/scss/components/_textarea.scss
+++ b/attestation_1/scss/components/_textarea.scss
@@ -11,7 +11,7 @@
 
     &__input {
         border: 2px solid $color-main;
-        color: $color-grey;
+        color: $color-main;
         font-size: 28px;
         line-height: 36px;
         font-weight: 700;
