--- a/attestation_1/css/style.css
+++ b/attestation_1/css/style.css
@@ -1113,7 +1113,7 @@ body {
 }
 .textarea-group__input {
   border: 2px solid #787878;
-  color: #CCCCCC;
+  color: #787878;
   font-size: 28px;
   line-height: 36px;
   font-weight: 700;
