homework_8 in progress

--- a/homework_8/scss/style.scss
+++ b/homework_8/scss/style.scss
@@ -3,6 +3,7 @@
 @import "./base/fonts";
 @import "./base/variables";
 @import "./base/general";
+@import "./components/main";
 @import "./components/form";
 @import "./components/button";
 @import "./components/input";
