--- a/homework_8/css/style.css
+++ b/homework_8/css/style.css
@@ -675,13 +675,19 @@ body {
   line-height: 16px;
   min-width: 320px;
   color: #FFF;
+  background-color: #1A226B;
+}
+
+.container {
+  max-width: 1380px;
+  margin: 0 auto;
+}
+
+.wrapper {
+  padding: 0 15px;
 }
 
 .main {
-  background: #1A226B;
-  height: 100vh;
-}
-.main__stars {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -691,49 +697,106 @@ body {
   background-repeat: repeat;
   -webkit-animation: animated-bg 60s linear infinite;
           animation: animated-bg 60s linear infinite;
-  width: 100%;
-  height: 100vh;
 }
 .main__title {
   font-size: 36px;
   margin-bottom: 80px;
+  line-height: 36px;
+  margin-top: 60px;
+  text-align: center;
 }
 
+@media screen and (max-width: 767px) {
+  .main {
+    background: none;
+  }
+}
+.form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 .form__alert {
   margin-bottom: 30px;
+  align-self: flex-start;
+  width: 100%;
+  background-color: #F8D7DA;
+  padding: 20px;
+  border-radius: 7px;
+  opacity: 0;
+  color: #505156;
+  display: flex;
+  align-items: center;
 }
-
-.input-group__input {
+.form__alert_active {
+  opacity: 1;
+}
+.form__alert-img {
+  margin-right: 15px;
+}
+.form__group {
+  display: flex;
+  align-items: center;
+}
+.form__input {
   padding: 10px;
   background-color: #1A226B;
   border: 1px solid #FFF;
   border-radius: 7px;
   color: #FFF;
 }
-.input-group__num {
-  width: 180px;
+.form__num {
+  max-width: 180px;
 }
-.input-group__sign {
-  width: 70px;
-}
-.input-group__equals {
+.form__equals {
   color: #FFF;
+  margin-left: 10px;
+  margin-right: 10px;
+  font-weight: 700;
 }
-
-.sign-group {
-  display: inline-block;
+.form__sign-group {
   position: relative;
+  margin-left: 10px;
+  margin-right: 10px;
 }
-.sign-group__sign {
+.form__sign {
+  max-width: 70px;
   cursor: pointer;
+  font-weight: bold;
+  text-align: center;
 }
-.sign-group__list {
+.form__sign-list {
   position: absolute;
   left: 0;
   width: 100%;
   border: 1px solid #FFF;
   padding: 10px;
+  border-radius: 7px;
+  margin-top: 5px;
+  opacity: 0;
+  background-color: #1A226B;
 }
-.sign-group__item {
+.form__sign-list_active {
+  opacity: 1;
+}
+.form__sign-item {
   cursor: pointer;
+  font-weight: bold;
+  text-align: center;
+  padding: 5px;
+}
+.form__btn {
+  margin-top: 140px;
+  background-color: #1A226B;
+}
+
+.btn {
+  border: 1px solid #FFF;
+  padding: 15px;
+  min-width: 180px;
+  color: #FFF;
+  border-radius: 7px;
+}
+.btn:hover {
+  background-color: #4E58B5;
 }/*# sourceMappingURL=style.css.map */
