--- a/homework_8/scss/base/_variables.scss
+++ b/homework_8/scss/base/_variables.scss
@@ -1,5 +1,4 @@
-$color-main: #787878;
+$color-main: #505156;
 $color-white: #FFF;
 $color-dark-blue: #1A226B;
-$color-grey: #CCCCCC;
-$color-light-grey: #E5E5E5;
+$color-error: #F8D7DA;
