--- a/homework_8/scss/components/_main.scss
+++ b/homework_8/scss/components/_main.scss
@@ -1,22 +1,24 @@
 .main {
-    background: $color-dark-blue;
-    height: 100vh;
-
-    &__stars {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        background: url('../img/stars.png');
-        background-position: 0 0;
-        background-repeat: repeat;
-        animation: animated-bg 60s linear infinite;
-        width: 100%;
-        height: 100vh;
-    }
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: url('../img/stars.png');
+    background-position: 0 0;
+    background-repeat: repeat;
+    animation: animated-bg 60s linear infinite;
 
     &__title {
         font-size: 36px;
         margin-bottom: 80px;
+        line-height: 36px;
+        margin-top: 60px;
+        text-align: center;
     }
+}
+
+@media screen and (max-width: 767px) {
+  .main{
+    background: none;
+  }
 }
