--- a/attestation_2/scss/base/_variables.scss
+++ b/attestation_2/scss/base/_variables.scss
@@ -3,5 +3,6 @@ $color-white: #FFF;
 $color-dark-blue: #1A226B;
 $color-grey: #CCCCCC;
 $color-light-grey: #E5E5E5;
+$color-error: #EE2424;
 $coeff-1440-w: 100vw / 1440;
 $coeff-768-w: 100vw / 768;
