--- a/attestation_2/scss/components/_input.scss
+++ b/attestation_2/scss/components/_input.scss
@@ -57,6 +57,15 @@
 
 @media screen and (max-width: 575px) {
     .input-group {
+        &__label-group {
+            display: flex;
+            flex-direction: column;
+        }
+
+        &__error {
+            position: relative;
+        }
+
         &__label {
             font-size: 14px;
             line-height: 14px;
